--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
+  min-height: 100vh;
+  background-color: #1e2b41;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +36,65 @@
   to {
     transform: rotate(360deg);
   }
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  color: white;
+}
+
+input {
+  padding: 0.6rem;
+  width: 300px;
+  margin-bottom: 1rem;
+}
+
+.login-student {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#btn {
+  cursor: pointer;
+  width: 8rem;
+  padding: 1rem 0rem;
+  font-size: 1rem;
+  background-color: cornflowerblue;
+  color: white;
+  border: none;
+  border-radius: 2rem;
+}
+#btn:hover {
+  background-color: rgb(73, 119, 206);
+}
+
+.del-btn {
+  cursor: pointer;
+  width: 8rem;
+  padding: 1rem 0rem;
+  font-size: 1rem;
+  background-color: rgb(237, 100, 100);
+  color: white;
+  border: none;
+  border-radius: 2rem;
+}
+
+.del-btn:hover {
+  background-color: rgb(206, 73, 73);
+}
+
+.studentinfo {
+  border: 1px solid grey;
+  width: fit-content;
+  padding: 1em;
+}
+
+.studentsinfo{
+  display: flex;
 }
